Bug 208365 - error: conflicting types for 'cap_set_nsowner'
Summary: error: conflicting types for 'cap_set_nsowner'
Status: RESOLVED CODE_FIX
Alias: None
Product: Tools
Classification: Unclassified
Component: libcap (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew G. Morgan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-29 08:19 UTC by Prasanth R
Modified: 2020-06-29 14:48 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Could see the integer returned to function with void datatype is conflicting (858 bytes, patch)
2020-06-29 08:21 UTC, Prasanth R
Details | Diff

Description Prasanth R 2020-06-29 08:19:51 UTC
Found this bug while cross-compiling: 

ar rcs libpsx.a psx.o
ranlib libpsx.a
cap_file.c:362:6: error: conflicting types for 'cap_set_nsowner'
 void cap_set_nsowner(cap_t cap_d, uid_t rootid)
      ^
In file included from libcap.h:16:0,
                 from cap_file.c:28:
/media/prasanth/work/webbuild/factory/build_armv7l-timesys-linux-gnueabi/libcap-2.36/libcap-2.36/libcap/../libcap/include/sys/capability.h:131:16: note: previous declaration of 'cap_set_nsowner' was here
 extern int     cap_set_nsowner(cap_t, uid_t);
                ^
cap_file.c: In function 'cap_set_nsowner':
cap_file.c:365:2: warning: 'return' with a value, in function returning void
  return -1;
  ^
Makefile:78: recipe for target 'cap_file.o' failed
make[2]: *** [cap_file.o] Error 1
Comment 1 Prasanth R 2020-06-29 08:21:22 UTC
Created attachment 289929 [details]
Could see the integer returned to function with void datatype is conflicting
Comment 2 Andrew G. Morgan 2020-06-29 14:48:03 UTC
Thanks for the bug report. A source code bug indeed! I think this should fix it:

https://git.kernel.org/pub/scm/libs/libcap/libcap.git/commit/?id=7dfeba06d78417ab2c36cac957e90f656498b7a2

Cheers

Andrew

Note You need to log in before you can comment on or make changes to this bug.