Fix declaration of mostly never compiled code.

The cap_set_nsowner() function, on systems where VFS_CAP_U32
is not defined. Bug report from Prasanth R.

  https://bugzilla.kernel.org/show_bug.cgi?id=208365

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>